--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/react": "^2.10.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.0",
+    "formik": "^2.4.6",
     "framer-motion": "^11.11.8",
     "mysql2": "^3.11.3",
     "next": "14.2.15",
